removed unnecessary divs and vairables, handling image files, fixed background image not showing in index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,11 +69,6 @@ h3 {
 	background-color: var(--fmbs-blue);
 }
 
-.fmbs-bg--shapes {
-	background-image: url( '../public/images/shapes_bg.png' );
-	background-size: 100% auto;
-}
-
 .fmbs-page-content {
 	
 	max-width: 1260px;
